--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -165,7 +165,7 @@ LeadSummaryScreen As screen:
                 SummaryForm As form:
                     DataSource: =LeadInformations
                     FillPortions: =0
-                    Height: =ContractNumberLSS.Height+BuildingNameLSS.Height+ZipCodeLSS.Height+AddressLSS.Height+UnitCountLSS.Height+UnitDescriptionLSS.Height+ScopeLSS.Height+ScopeOfWorkLSS.Height+ManuallyScopeOfWorkLSS.Height+EstimatedHoursLSS.Height+NotesLSS.Height+UnitDownLSS.Height+AdditionalExpensesRequiredLSS.Height+TravelRequiredLSS.Height+CommunicatedtoCustomerLSS.Height+30
+                    Height: =ContractNumberLSS.Height+BuildingNameLSS.Height+ZipCodeLSS.Height+AddressLSS.Height+UnitCountLSS.Height+UnitDescriptionLSS.Height+ScopeLSS.Height+ScopeOfWorkLSS.Height+ManuallyScopeOfWorkLSS.Height+EstimatedHoursLSS.Height+NotesLSS.Height+UnitDownLSS.Height+AdditionalExpensesRequiredLSS.Height+TravelRequiredLSS.Height+CommunicatedtoCustomerLSS.Height+'CustomerContact _DataCard3'.Height+'CustomerName _DataCard3'.Height+30
                     Item: =VarFormMode
                     LayoutMinHeight: =250
                     LayoutMinWidth: =Parent.Width
@@ -1275,6 +1275,8 @@ LeadSummaryScreen As screen:
                             Font: =Font.Arial
                             HoverBorderColor: =
                             HoverColor: =RGBA(0, 0, 0, 1)
+                            OnCheck: =Set(VarCommunication,true)
+                            OnUncheck: =Set(VarCommunication,false)
                             PressedBorderColor: =
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: ="Communicated to customer"
@@ -1283,6 +1285,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =5
 
                     "'CustomerName _DataCard3' As typedDataCard.textualEditCard":
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="shlrf_customername"
                         Default: =ThisItem.'CustomerName '
@@ -1293,13 +1296,23 @@ LeadSummaryScreen As screen:
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customername")
                         Required: =false
                         Update: =DataCardValue7.Text
-                        Width: =727
-                        X: =0
+                        Visible: =VarCommunication
+                        Width: =Parent.Width
+                        X: =50
                         Y: =15
                         ZIndex: =1
 
+                        Rectangle7_2 As rectangle:
+                            BorderColor: =RGBA(237, 237, 237, 1)
+                            Fill: =RGBA(237, 237, 237, 1)
+                            Height: =96
+                            Width: =Parent.Width-60
+                            X: =40
+                            ZIndex: =1
+
                         DataCardKey7 As label:
                             AutoHeight: =true
+                            Color: =RGBA(0, 0, 0, 1)
                             Font: =Font.Arial
                             Height: =34
                             Text: =Parent.DisplayName
@@ -1307,14 +1320,17 @@ LeadSummaryScreen As screen:
                             Wrap: =false
                             X: =50
                             Y: =10
-                            ZIndex: =1
+                            ZIndex: =2
 
                         DataCardValue7 As text:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                            Default: =Parent.Default
+                            Default: =IntxtContactName
                             DelayOutput: =true
+                            DisabledFill: =RGBA(255, 255, 255, 1)
                             DisplayMode: =Parent.DisplayMode
                             Font: =Font.Arial
+                            HoverBorderColor: =RGBA(202, 202, 202, 1)
+                            HoverFill: =RGBA(255, 255, 255, 1)
                             MaxLength: =Parent.MaxLength
                             PaddingLeft: =5
                             RadiusBottomLeft: =0
@@ -1325,7 +1341,7 @@ LeadSummaryScreen As screen:
                             Width: =Parent.Width - 120
                             X: =50
                             Y: =DataCardKey7.Y + DataCardKey7.Height + 5
-                            ZIndex: =2
+                            ZIndex: =3
 
                         ErrorMessage7 As label:
                             AutoHeight: =true
@@ -1340,7 +1356,7 @@ LeadSummaryScreen As screen:
                             Width: =Parent.Width - 60
                             X: =30
                             Y: =DataCardValue7.Y + DataCardValue7.Height
-                            ZIndex: =3
+                            ZIndex: =4
 
                         StarVisible7 As label:
                             Align: =Align.Center
@@ -1350,17 +1366,10 @@ LeadSummaryScreen As screen:
                             Width: =30
                             Wrap: =false
                             Y: =DataCardKey7.Y
-                            ZIndex: =4
-
-                        Rectangle7_2 As rectangle:
-                            BorderColor: =RGBA(237, 237, 237, 1)
-                            Fill: =RGBA(237, 237, 237, 1)
-                            Height: =96
-                            Width: =Parent.Width-60
-                            X: =40
                             ZIndex: =5
 
                     "'CustomerContact _DataCard3' As typedDataCard.textualEditCard":
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="shlrf_customercontact"
                         Default: =ThisItem.'CustomerContact '
@@ -1371,13 +1380,23 @@ LeadSummaryScreen As screen:
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customercontact")
                         Required: =false
                         Update: =IntxtContactNumberES_1.Text
+                        Visible: =VarCommunication
                         Width: =Parent.Width
-                        X: =0
+                        X: =50
                         Y: =16
                         ZIndex: =1
 
+                        Rectangle7_3 As rectangle:
+                            BorderColor: =RGBA(237, 237, 237, 1)
+                            Fill: =RGBA(237, 237, 237, 1)
+                            Height: =96
+                            Width: =Parent.Width-60
+                            X: =40
+                            ZIndex: =1
+
                         DataCardKey8 As label:
                             AutoHeight: =true
+                            Color: =RGBA(0, 0, 0, 1)
                             Font: =Font.Arial
                             Height: =34
                             Text: =Parent.DisplayName
@@ -1385,7 +1404,7 @@ LeadSummaryScreen As screen:
                             Wrap: =false
                             X: =50
                             Y: =10
-                            ZIndex: =1
+                            ZIndex: =2
 
                         ErrorMessage8 As label:
                             AutoHeight: =true
@@ -1451,20 +1470,14 @@ LeadSummaryScreen As screen:
                             Height: =IntxtContactNumberES_1.Height
                             OnSelect: =Set(varContactNumber,false);
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: =If(IsBlank(IntxtContactNumberES_1),"",VarformattedNumber)
+                            Text: |-
+                                =
+                                If(IsBlank(lblContactNumber),"",VarformattedNumber)
                             Visible: =varContactNumber
                             Width: =Parent.Width-120
                             X: =50
                             Y: =IntxtContactNumberES_1.Y
                             ZIndex: =6
-
-                        Rectangle7_3 As rectangle:
-                            BorderColor: =RGBA(237, 237, 237, 1)
-                            Fill: =RGBA(237, 237, 237, 1)
-                            Height: =96
-                            Width: =Parent.Width-60
-                            X: =40
-                            ZIndex: =7
 
                 "glryImageLSS As gallery.'BrowseLayout_Vertical_OneImageTwoColumnVariant_ver5.0'":
                     AlignInContainer: =AlignInContainer.SetByContainer
@@ -1578,6 +1591,8 @@ LeadSummaryScreen As screen:
                                 AdditionalExpensesRequired: cboxAELSS.Value,
                                 TravelRequired: cboxTravelRequiredLSS.Value,
                                 CommunicatedToCustomer: CboxCCLSS.Value,
+                                'CustomerName ':DataCardKey7.Text,
+                                'CustomerContact ':lblContactNumber_1.Text,
                                 LeadStatus: "Submitted",
                                 Email: User().Email,
                                 MechanicName: User().FullName,
