--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -795,7 +795,7 @@ ScopeScreen As screen:
                 Size: =14
                 Text: |-
                     =
-                        "Scope  & Scope of Work are mandatory "
+                        "Scope  & Scope of work are mandatory "
                 Width: =Parent.Width
                 ZIndex: =2
 
