--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -210,6 +210,7 @@ LeadSummaryScreen As screen:
                                 =//Parent.Default
                                 IntxtContractNumber.Text
                             DelayOutput: =true
+                            DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =DisplayMode.Disabled
                             Font: =Font.Arial
                             Height: =50
@@ -289,6 +290,7 @@ LeadSummaryScreen As screen:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                             Default: =IntxtBuildingName.Text
                             DelayOutput: =true
+                            DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =DisplayMode.Disabled
                             Font: =Font.Arial
                             Height: =50
@@ -368,6 +370,7 @@ LeadSummaryScreen As screen:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                             Default: =IntxtZipCode.Text
                             DelayOutput: =true
+                            DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =DisplayMode.Disabled
                             Height: =50
                             HoverBorderColor: =RGBA(202, 202, 202, 1)
@@ -446,6 +449,7 @@ LeadSummaryScreen As screen:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                             Default: =IntxtAddress.Text
                             DelayOutput: =true
+                            DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =DisplayMode.Disabled
                             Font: =Font.Arial
                             Height: =50
@@ -1718,7 +1722,7 @@ LeadSummaryScreen As screen:
                 FontWeight: =FontWeight.Semibold
                 Height: =100
                 Size: =14
-                Text: =If(VarNotificationloding,"Submitting",VarNotificationSuccess,"Lead Submitted Successfully.")
+                Text: =If(VarNotificationloding,"Submitting",VarNotificationSuccess,"Lead submitted successfully.")
                 Width: =Parent.Width
                 ZIndex: =2
 
@@ -1730,7 +1734,7 @@ LeadSummaryScreen As screen:
                 OnSelect: =Navigate(DashboardScreen);
                 Size: =14
                 Text: ="Ok"
-                Visible: =If(Label3.Text="Lead Submitted Successfully.",true,false)
+                Visible: =If(Label3.Text="Lead submitted successfully.",true,false)
                 Width: =Parent.Width/5
                 ZIndex: =3
 
