--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -163,10 +163,11 @@ ViewDetailsScreen As screen:
                 DefaultMode: =FormMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =0
-                Height: ='Contract Number_DataCard1_3'.Height+'Building Name_DataCard2_3'.Height+PinCode_DataCard2_3.Height+Address_DataCard2_3.Height+UnitCount_DataCard3_3.Height+UnitDescription_DataCard3_3.Height+PrimaryScopeofWorkLID_DataCard1.Height+SecondaryScopeofWorkLID_DataCard1.Height+ManuallyScopeOfWork_DataCard3_3.Height+EstimatedHours_DataCard1_4.Height+Material_DataCard1_4.Height+'Unit Down_DataCard2_4'.Height+'Additional expenses required_DataCard2_3'.Height+'Travel Required_DataCard2_3'.Height+'Communicated to Customer_DataCard2_3'.Height+40
+                Height: ='Contract Number_DataCard1_3'.Height+'Building Name_DataCard2_3'.Height+PinCode_DataCard2_3.Height+Address_DataCard2_3.Height+UnitCount_DataCard3_3.Height+UnitDescription_DataCard3_3.Height+PrimaryScopeofWorkLID_DataCard1.Height+SecondaryScopeofWorkLID_DataCard1.Height+ManuallyScopeOfWork_DataCard3_3.Height+EstimatedHours_DataCard1_4.Height+Material_DataCard1_4.Height+'Unit Down_DataCard2_4'.Height+'Additional expenses required_DataCard2_3'.Height+'Travel Required_DataCard2_3'.Height+'Communicated to Customer_DataCard2_3'.Height+'CustomerName _DataCard2'.Height+'CustomerName _DataCard2'.Height+40
                 Item: =VarFormMode
                 LayoutMinHeight: =250
                 LayoutMinWidth: =400
+                NumberOfColumns: =1
                 Width: =Parent.Width
                 Y: =10
                 ZIndex: =1
@@ -183,7 +184,7 @@ ViewDetailsScreen As screen:
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_contractnumber")
                     Required: =false
                     Update: =DataCardValue25_3.Text
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
                     Y: =0
                     ZIndex: =1
@@ -269,7 +270,7 @@ ViewDetailsScreen As screen:
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_buildingname")
                     Required: =false
                     Update: =DataCardValue33_3.Text
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
                     Y: =1
                     ZIndex: =1
@@ -356,7 +357,7 @@ ViewDetailsScreen As screen:
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_zipcode")
                     Required: =false
                     Update: =DataCardValue1_3.Text
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
                     Y: =2
                     ZIndex: =1
@@ -439,7 +440,7 @@ ViewDetailsScreen As screen:
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_address")
                     Required: =false
                     Update: =DataCardValue32_3.Text
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
                     Y: =3
                     ZIndex: =1
@@ -523,7 +524,7 @@ ViewDetailsScreen As screen:
                     Height: =50
                     Required: =false
                     Update: =Value(DataCardValue29_3.Text)
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
                     Y: =4
                     ZIndex: =1
@@ -608,7 +609,7 @@ ViewDetailsScreen As screen:
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_unitdescription")
                     Required: =false
                     Update: =DataCardValue30_3.Text
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
                     Y: =5
                     ZIndex: =1
@@ -693,7 +694,7 @@ ViewDetailsScreen As screen:
                     Height: =50
                     Required: =false
                     Update: =DataCardValue1.Selected
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
                     Y: =6
                     ZIndex: =1
@@ -768,9 +769,9 @@ ViewDetailsScreen As screen:
                     Height: =50
                     Required: =false
                     Update: =DataCardValue2.Selected
-                    Width: =Parent.Width
-                    X: =1
-                    Y: =6
+                    Width: =Parent.Width/1.04
+                    X: =0
+                    Y: =7
                     ZIndex: =1
 
                     DataCardKey2 As label:
@@ -845,9 +846,9 @@ ViewDetailsScreen As screen:
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customscopeofwork")
                     Required: =false
                     Update: =DataCardValue26_3.Text
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
-                    Y: =7
+                    Y: =8
                     ZIndex: =1
 
                     DataCardKey27_3 As label:
@@ -928,9 +929,9 @@ ViewDetailsScreen As screen:
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_estimatedhours")
                     Required: =false
                     Update: =DataCardValue18_4.Text
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
-                    Y: =8
+                    Y: =9
                     ZIndex: =1
 
                     DataCardKey19_4 As label:
@@ -1014,9 +1015,9 @@ ViewDetailsScreen As screen:
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_notes")
                     Required: =false
                     Update: =DataCardValue19_4.Text
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
-                    Y: =9
+                    Y: =10
                     ZIndex: =1
 
                     DataCardKey20_4 As label:
@@ -1100,9 +1101,9 @@ ViewDetailsScreen As screen:
                     Visible: |-
                         =//If(Gallery1.Selected.'Unit Down'='Unit Down (LeadInformations)'.Yes,true,false)
                         If(ThisItem.IsUnitDown='IsUnitDown (LeadInformations)'.Yes,true,false)
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
-                    Y: =10
+                    Y: =11
                     ZIndex: =1
 
                     ErrorMessage25_4 As label:
@@ -1162,9 +1163,9 @@ ViewDetailsScreen As screen:
                     Required: =false
                     Update: =
                     Visible: =If(ThisItem.AdditionalExpensesRequired='AdditionalExpensesRequired (LeadInformations)'.Yes,true,false)
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
-                    Y: =11
+                    Y: =12
                     ZIndex: =1
 
                     ErrorMessage10_3 As label:
@@ -1227,9 +1228,9 @@ ViewDetailsScreen As screen:
                     Visible: |-
                         =//If(Gallery1.Selected.'Travel Required'='Travel Required (LeadInformations)'.Yes,true,false)
                         If(ThisItem.TravelRequired='TravelRequired (LeadInformations)'.Yes,true,false)
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
-                    Y: =12
+                    Y: =13
                     ZIndex: =1
 
                     ErrorMessage16_3 As label:
@@ -1290,9 +1291,9 @@ ViewDetailsScreen As screen:
                     Visible: |-
                         =//If(Gallery1_1.Selected.'Communicated to Customer'='Communicated to Customer (LeadInformations)'.Yes,true,false)
                         If(ThisItem.CommunicatedToCustomer='CommunicatedToCustomer (LeadInformations)'.Yes,true,false)
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.04
                     X: =0
-                    Y: =13
+                    Y: =14
                     ZIndex: =1
 
                     ErrorMessage17_3 As label:
@@ -1342,6 +1343,7 @@ ViewDetailsScreen As screen:
                         ZIndex: =5
 
                 "'CustomerName _DataCard2' As typedDataCard.textualEditCard":
+                    BorderColor: =RGBA(0, 0, 0, 1)
                     BorderStyle: =BorderStyle.Solid
                     DataField: ="shlrf_customername"
                     Default: =ThisItem.'CustomerName '
@@ -1352,13 +1354,14 @@ ViewDetailsScreen As screen:
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customername")
                     Required: =false
                     Update: =DataCardValue3.Text
-                    Width: =Parent.Width
-                    X: =1
-                    Y: =13
+                    Width: =Parent.Width/1.04
+                    X: =0
+                    Y: =15
                     ZIndex: =1
 
                     DataCardKey3 As label:
                         AutoHeight: =true
+                        Color: =RGBA(0, 0, 0, 1)
                         Height: =34
                         Text: =Parent.DisplayName
                         Width: =Parent.Width - 60
@@ -1369,6 +1372,7 @@ ViewDetailsScreen As screen:
 
                     DataCardValue3 As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                        BorderThickness: =0
                         Default: =ThisItem.'CustomerName '
                         DelayOutput: =true
                         DisplayMode: =Parent.DisplayMode
@@ -1410,6 +1414,7 @@ ViewDetailsScreen As screen:
                         ZIndex: =4
 
                 "'CustomerContact _DataCard1' As typedDataCard.textualEditCard":
+                    BorderColor: =RGBA(0, 0, 0, 1)
                     BorderStyle: =BorderStyle.Solid
                     DataField: ="shlrf_customercontact"
                     Default: =ThisItem.'CustomerContact '
@@ -1420,9 +1425,9 @@ ViewDetailsScreen As screen:
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customercontact")
                     Required: =false
                     Update: =DataCardValue4.Text
-                    Width: =Parent.Width
-                    X: =2
-                    Y: =13
+                    Width: =Parent.Width/1.04
+                    X: =0
+                    Y: =16
                     ZIndex: =1
 
                     DataCardKey4 As label:
